--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </form>
         <div class="weather-status text-white text-center">
             <img id="weather-icon" src="https://openweathermap.org/img/wn/02d@2x.png" alt="">
-            <h1 id="location">Dhaka</h1>
-            <h3><span id="temp">38.16</span>&deg;C</h3>
+            <h1 id="location"></h1>
+            <h3><span id="temp"></span>&deg;C</h3>
             <h1 class="lead" id="description">Clouds</h1>
         </div>
     </div>
